HTML icon updated

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" href="bird.png" />
     <title>HasheeBird</title>
 </head>
 <body>
